--- a/C++/C++_06_编程技巧/2024-05-22-C++_06_3_编程技巧.md
+++ b/C++/C++_06_编程技巧/2024-05-22-C++_06_3_编程技巧.md
@@ -9,6 +9,187 @@ tag: CppTechnique
 
 + C++编程技巧
 
+## C 位操作 获取比特位中指定位置的值
+
+在 C 语言中，你可以使用位操作来获取整数中特定位的值。假设你有一个整数（`int` 或 `unsigned int`），并且你想要获取它的第 `n` 个比特位（从0开始计数，最低位为第0位）的值，可以使用以下步骤：
+
+### 获取指定比特位的值
+
+假设我们有一个整数 `num`，想要获取它的第 `n` 位的值。我们可以通过以下步骤实现：
+
+1. **右移**：将整数右移 `n` 位，使得我们感兴趣的位移动到最低位。
+2. **按位与**：对右移后的结果与 `1` 进行按位与操作，提取最低位的值（即我们需要的第 `n` 位的值）。
+
+### 示例代码
+
+```c
+#include <stdio.h>
+
+int main() {
+    unsigned int num = 0b10101100; // 示例整数
+    int n = 5; // 要获取的比特位位置
+
+    // 获取第 n 位的值
+    unsigned int bit_value = (num >> n) & 1;
+
+    printf("The value of bit %d is: %u\n", n, bit_value);
+
+    return 0;
+}
+```
+
+### 代码解释
+- `num >> n`：将 `num` 右移 `n` 位。这样，第 `n` 位就移动到了最低位。
+- `(num >> n) & 1`：使用按位与操作符 `&` 来提取最低位的值。如果最低位是 `1`，结果是 `1`；如果是 `0`，结果是 `0`。
+
+### 示例输出
+
+如果 `num = 0b10101100`，并且 `n = 5`，那么第 `5` 位是 `1`，因此输出将是：
+
+```
+The value of bit 5 is: 1
+```
+
+通过这种方式，你可以获取整数中任意比特位的值。
+
+## C++ 将两个uint8_t的数据拼接成一个uint16_t的数据
+
+在C++中，如果你有两个 `uint8_t` 类型的数据，并且你想将它们拼接成一个 `uint16_t` 类型的数据，可以通过位移和按位或操作来实现。通常，这两个 `uint8_t` 数据分别作为拼接后的高位和低位。
+
+### 示例代码
+
+假设你有两个 `uint8_t` 类型的变量 `high_byte` 和 `low_byte`，你可以将它们拼接成一个 `uint16_t` 类型的变量 `result`，其中 `high_byte` 是高 8 位，`low_byte` 是低 8 位。
+
+```cpp
+#include <iostream>
+#include <cstdint>
+
+int main() {
+    uint8_t high_byte = 0xAB;  // 高位字节，例如 0xAB
+    uint8_t low_byte = 0xCD;   // 低位字节，例如 0xCD
+
+    // 拼接成一个uint16_t
+    uint16_t result = (static_cast<uint16_t>(high_byte) << 8) | low_byte;
+
+    std::cout << std::hex << "Result: 0x" << result << std::endl;
+
+    return 0;
+}
+```
+
+### 代码解释
+
+- `static_cast<uint16_t>(high_byte) << 8`：首先，将 `high_byte` 转换为 `uint16_t` 类型，然后将它左移 8 位，使其成为 `result` 的高位。
+- `| low_byte`：使用按位或操作符 `|` 将 `low_byte` 添加到 `result` 的低 8 位。
+
+### 示例输出
+
+如果 `high_byte = 0xAB` 且 `low_byte = 0xCD`，那么拼接后的 `result` 是：
+
+```
+Result: 0xABCD
+```
+
+这个结果表示 `high_byte` 成为 `result` 的高 8 位，而 `low_byte` 成为 `result` 的低 8 位。
+
+## C++ 将整数输出二进制
+
+在C++中，将整数以二进制格式输出有多种方法。可以使用手动位操作实现，也可以利用标准库中的函数来完成。下面是几种方法来实现这一功能。
+
+### 方法1：使用位操作手动输出二进制
+
+```cpp
+#include <iostream>
+#include <bitset>
+
+int main() {
+    unsigned int num = 29; // 示例整数
+
+    std::cout << "Binary representation of " << num << " is: ";
+
+    for (int i = 31; i >= 0; i--) {
+        std::cout << ((num >> i) & 1);
+    }
+
+    std::cout << std::endl;
+
+    return 0;
+}
+```
+
+### 代码解释
+- `num >> i`：将 `num` 右移 `i` 位，使得我们感兴趣的位移动到最低位。
+- `((num >> i) & 1)`：提取最低位的值，并将其输出。
+
+在这个例子中，假设 `num = 29`，二进制输出为：
+
+```
+Binary representation of 29 is: 00000000000000000000000000011101
+```
+
+### 方法2：使用 `bitset`
+
+C++ 标准库提供了 `std::bitset`，可以方便地将整数转换为二进制表示并输出。
+
+```cpp
+#include <iostream>
+#include <bitset>
+
+int main() {
+    unsigned int num = 29; // 示例整数
+
+    std::bitset<32> binary(num);
+
+    std::cout << "Binary representation of " << num << " is: " << binary << std::endl;
+
+    return 0;
+}
+```
+
+### 代码解释
+- `std::bitset<32>`：创建一个大小为32位的 `bitset`，并用 `num` 的值来初始化它。
+- `binary`：`bitset` 会自动将整数转换为二进制格式并存储。
+
+输出结果同样会是：
+
+```
+Binary representation of 29 is: 00000000000000000000000000011101
+```
+
+### 方法3：模板实现支持不同位数
+
+如果你想实现一个可以处理任意位数的模板函数，可以使用以下代码：
+
+```cpp
+#include <iostream>
+#include <bitset>
+
+template <typename T>
+void printBinary(T num) {
+    std::bitset<sizeof(T) * 8> binary(num);
+    std::cout << "Binary representation: " << binary << std::endl;
+}
+
+int main() {
+    unsigned int num = 29; // 示例整数
+    printBinary(num);
+
+    return 0;
+}
+```
+
+### 代码解释
+- `sizeof(T) * 8`：计算类型 `T` 的位数，并用 `bitset` 表示。
+- `printBinary`：模板函数可以处理不同类型的整数（`uint8_t`, `uint16_t`, `int`, 等）。
+
+这会自动根据输入的整数类型调整输出的二进制位数。对于 `num = 29`，输出将是：
+
+```
+Binary representation: 00000000000000000000000000011101
+```
+
+这些方法都能有效地将整数转换为二进制并输出。你可以根据需求选择最适合你的方法。
+
 ## const/constexpr
 
 + const一般的用法就是修饰变量、引用、指针，修饰之后它们就变成了常量，需要注意的是const并未区分出编译期常量和运行期常量，并且const只保证了运行时不直接被修改。
