--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -1821,4 +1821,4 @@ last_modified_date: 2024-07-30 10:00:00 +0800
   + 工作
     + 增加视觉算法命令转换函数 [done]
     + 根据参数修改RobotParameter.h  [done]
-    + 遥控器控制编写
+    + 遥控器控制编写 [doing]
