--- a/C++/C++_99_其他/2024-05-22-C++常见错误.md
+++ b/C++/C++_99_其他/2024-05-22-C++常见错误.md
@@ -9,6 +9,15 @@ tag: CppOthers
 
 + C/C++程序编译或者运行常见错误
 
+## windows下C++程序运行出错: Access violation reading location
+
++ 在Visual Studio 2019的Ｃ++工程，编译是没有问题的，但是在程序调试运行时经常会出现’Access violation reading location’的问题，经过调试跟踪后，发现是由于变量被多个代码段访问到，可能出现了空指针的情况。这种错误也不是每次都发生，所以比较难找到原因和追踪到。具体原因可能是所访问的变量已经被其它部分代码改动了，具体建议如下：
+Then verify that the values are not being unintentionally changed somewhere in the program by creating a Data Breakpoint for the pointer in question to make sure it isn’t being modified elsewhere in the program.
+
++ 使用以下两个办法可以大大减少此类问题的发生。  
+  + 在有可能发生变量使用冲突的地方加上 try {...} catch (std::exception ex) {} 来捕捉这个异常，异常被捕捉到后程序时可以接着运行的
+  + 减少多段代码访问同一个变量的情况。
+
 ## warning C4819: 该文件包含不能在当前代码页(936)中表示的字符。请将该文件保存为 Unicode 格式以防止数据丢失
 
 + 使用vs编译时遇到这个错误,正常情况下写的文件是没有问题的，只要用其它编辑器修改过后再保存,再用vs编译就会出现这个问题。
