--- a/Windows/2024-05-22-windows_03_常用技巧.md
+++ b/Windows/2024-05-22-windows_03_常用技巧.md
@@ -10,6 +10,51 @@ last_modified_date: 2024-06-29 11:00:00 +0800
 
 + windows系统下常用技巧
 
+## windows 查看端口占用
+
+要查看 Windows 系统中端口的占用情况，可以使用以下几种方法：
+
+### 方法 1: 使用 `netstat` 命令
+1. 打开命令提示符（可以按 `Win + R`，然后输入 `cmd`，再按回车键）。
+2. 输入以下命令查看所有监听的端口和对应的进程 ID（PID）：
+   ```bash
+   netstat -ano
+   ```
+   其中：
+   - `-a` 参数表示显示所有连接和监听端口。
+   - `-n` 参数表示以数字形式显示地址和端口号。
+   - `-o` 参数显示与每个连接关联的进程 ID。
+
+3. 找到你要检查的端口号，可以通过查看最后一列的 PID 来确定哪个进程占用了该端口。
+
+### 方法 2: 使用 `tasklist` 命令
+你可以结合 `tasklist` 命令来查看具体是哪个程序占用了某个端口。
+
+1. 获取端口占用的 PID，比如你想查看 `8080` 端口的占用情况：
+   ```bash
+   netstat -ano | findstr :8080
+   ```
+2. 根据 PID 查找进程名称：
+   ```bash
+   tasklist /fi "pid eq PID_NUMBER"
+   ```
+   把 `PID_NUMBER` 替换成你从 `netstat` 命令中得到的 PID。
+
+### 方法 3: 使用 `PowerShell`
+你也可以通过 PowerShell 查看端口占用情况。
+
+1. 打开 PowerShell。
+2. 输入以下命令查看所有监听的端口和对应的进程：
+   ```powershell
+   Get-NetTCPConnection | Where-Object { $_.State -eq 'Listen' } | Select-Object LocalAddress, LocalPort, OwningProcess
+   ```
+3. 可以使用 `Get-Process` 命令进一步查看进程的详细信息：
+   ```powershell
+   Get-Process -Id PID_NUMBER
+   ```
+
+这些方法都可以帮助你查看和排查端口占用的问题。
+
 ## windows11 查看系统日志的方法
 
 在 Windows 11 中查看系统日志的方法如下：
