--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -1822,3 +1822,11 @@ last_modified_date: 2024-07-30 10:00:00 +0800
     + 增加视觉算法命令转换函数 [done]
     + 根据参数修改RobotParameter.h  [done]
     + 遥控器控制编写 [doing]
+
++ 09.03
+  + 工作
+    + 遥控器控制编写 [done]
+  + 设计模式
+    + 单例模式学习
+  + 提升
+    + Effective Modern C++ 中文版学习
