--- a/CMake/cmake_99_其他/2024-05-22-cmake_3_杂项.md
+++ b/CMake/cmake_99_其他/2024-05-22-cmake_3_杂项.md
@@ -7,6 +7,13 @@ tag: CMake
 ---
 ## 简介
 
+### cmake自定义模块(Module)
+
++ 项目一般从CMakelists.txt开始编写，但是随着时间的推移，CMakeLists.txt文件会变得越来越大，这个时候我们就需要将CMakeLists.txt文件拆开分成几个小的模块，这样做的好处是
+  + 主文件CMakeList.txt易读性强
+  + CMake模块能够在其他项目中重复使用
+  + 和CMake的函数相比，模块能够帮助我们限制变量的作用域
+
 ### cmake 指定C++版本
 
 + 在 CmakeLists.txt 中增加对 C++ 版本的定义。方法如下：
