--- a/CMake/cmake_3_常用技巧/2024-05-22-cmake_3_02_常用技巧.md
+++ b/CMake/cmake_3_常用技巧/2024-05-22-cmake_3_02_常用技巧.md
@@ -9,6 +9,89 @@ tag: CMake
 
 + cmake 常用的技巧
 
+## vscode中cmake项目配置文件手动修改编译器路径
+
+在 VSCode 中，如果你想为 CMake 项目手动配置编译器路径，可以通过修改 `CMakeSettings.json` 或者 `.vscode/settings.json` 文件来实现。以下是配置步骤：
+
+### 1. 使用 `CMakeSettings.json`
+CMake 支持通过 `CMakeSettings.json` 来设置不同的构建配置，比如指定编译器路径。创建或修改项目根目录中的 `CMakeSettings.json` 文件，添加类似下面的配置：
+
+```json
+{
+  "configurations": [
+    {
+      "name": "x64-Debug",
+      "generator": "Ninja",
+      "configurationType": "Debug",
+      "buildRoot": "${projectDir}\\out\\build\\${name}",
+      "installRoot": "${projectDir}\\out\\install\\${name}",
+      "cmakeCommandArgs": "",
+      "buildCommandArgs": "",
+      "ctestCommandArgs": "",
+      "variables": [
+        {
+          "name": "CMAKE_C_COMPILER",
+          "value": "C:/Path/To/Your/Compiler/gcc.exe"
+        },
+        {
+          "name": "CMAKE_CXX_COMPILER",
+          "value": "C:/Path/To/Your/Compiler/g++.exe"
+        }
+      ]
+    }
+  ]
+}
+```
+
+这会告诉 CMake 使用指定的编译器路径。
+
+### 2. 使用 `.vscode/settings.json`
+你也可以直接在 VSCode 的工作区配置中设置编译器路径，方法是修改 `.vscode/settings.json` 文件：
+
+```json
+{
+  "cmake.cmakePath": "C:/Path/To/CMake/cmake.exe",
+  "cmake.generator": "Ninja",
+  "cmake.buildDirectory": "${workspaceFolder}/build",
+  "cmake.environment": {
+    "CC": "C:/Path/To/Your/Compiler/gcc.exe",
+    "CXX": "C:/Path/To/Your/Compiler/g++.exe"
+  }
+}
+```
+
+这里 `cmake.environment` 变量用于指定 C 和 C++ 编译器路径。
+
+### 3. 通过 `CMakeLists.txt` 文件
+你也可以在 `CMakeLists.txt` 中直接添加设置编译器的指令：
+
+```cmake
+set(CMAKE_C_COMPILER "C:/Path/To/Your/Compiler/gcc.exe")
+set(CMAKE_CXX_COMPILER "C:/Path/To/Your/Compiler/g++.exe")
+```
+
+### 4. 使用 `cmake-kits.json`
+VSCode 的 CMake Tools 扩展提供了一种通过 `cmake-kits.json` 来管理编译器的方式。你可以在 `.vscode/cmake-kits.json` 中定义编译器路径：
+
+```json
+[
+  {
+    "name": "GCC",
+    "compilers": {
+      "C": "C:/Path/To/Your/Compiler/gcc.exe",
+      "CXX": "C:/Path/To/Your/Compiler/g++.exe"
+    }
+  }
+]
+```
+
+然后在 VSCode 的 CMake Tools 扩展中选择这个编译器套件。
+
+### 5. 选择编译器
+如果你已经配置了多个编译器，可以通过命令面板（`Ctrl+Shift+P`）打开 `CMake: Select a Kit`，然后从列表中选择你配置的编译器。
+
+这几种方式都可以帮助你手动指定 CMake 项目的编译器路径。
+
 ## cmake 静态链接库顺序问题
 
 + 默认情况下要求被依赖的库放在依赖它的库后面，当一个程序或共享库依赖的静态库较多时，可能会陷入解决链接问题的坑中。如果对静态库不熟悉，需要结构nm等工具来解决顺序问题。
