--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -1830,3 +1830,34 @@ last_modified_date: 2024-07-30 10:00:00 +0800
     + 单例模式学习
   + 提升
     + Effective Modern C++ 中文版学习
+
++ 09.04
+  + 工作
+    + 调试
+
++ 09.05
+  + 工作
+    + 调试
+
++ 09.06
+  + 工作
+    + 调试
+
++ 09.07
+  + 图书馆学习
+    + C++程序设计：标准库
+
++ 09.08
+  + 图书馆学习
+    + C++程序设计：标准库
+
+## 2024.09.09 - 2024.09.15
+
++ 08.09
+  + 工作
+    + 解决日志中文乱码问题 [done]
+      + 新增加的中文日志不乱码
+      + 重新编译
+    + 工控机长按显示右键修改为长按 [done]
+      + 打开控制面板 --》 笔和触摸 --》笔选项 --》 按下并保持 --》设置
+    + 测试archive包是否可用
