--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -1860,4 +1860,5 @@ last_modified_date: 2024-07-30 10:00:00 +0800
       + 重新编译
     + 工控机长按显示右键修改为长按 [done]
       + 打开控制面板 --》 笔和触摸 --》笔选项 --》 按下并保持 --》设置
-    + 测试archive包是否可用
+    + 测试archive包是否可用 [done]
+      + 不可用
