--- a/Qt/2024-09-05-qt_3_常见类型.md
+++ b/Qt/2024-09-05-qt_3_常见类型.md
@@ -9,6 +9,173 @@ tag: Qt
 
 + Qt 中常见的数据类型及其笔记
 
+## Qt QString 详解
+
+`QString` 是 Qt 框架中用于表示和操作文本字符串的类。它是一个 Unicode 字符串类，能够很好地处理多语言字符集和复杂文本操作。`QString` 提供了丰富的功能用于创建、修改、查询和转换字符串。以下是 `QString` 的详细介绍，包括常用功能和示例代码。
+
+### 1. **QString 基本概念**
+`QString` 是一个 Unicode 字符串类，支持宽字符集。Qt 使用 UTF-16 编码存储字符串。相比 C++ 的 `std::string`，`QString` 更加适合处理包含多语言和特殊字符的文本。
+
+### 2. **QString 的构造方法**
+`QString` 提供了多种构造函数，可以从各种数据类型构建字符串。
+
+```cpp
+QString str1;                        // 空字符串
+QString str2("Hello, Qt!");           // 从字符串字面值创建
+QString str3(QLatin1String("Hello")); // 从 QLatin1String 创建
+QString str4(str2);                   // 拷贝构造函数
+QString str5 = QString::number(42);   // 从数字创建
+```
+
+### 3. **常用方法**
+#### 3.1. 字符串拼接
+`QString` 提供了多种方式来拼接字符串。
+
+- 使用 `+` 运算符拼接：
+  ```cpp
+  QString str1 = "Hello";
+  QString str2 = "World";
+  QString result = str1 + " " + str2;  // "Hello World"
+  ```
+
+- 使用 `append()` 方法拼接：
+  ```cpp
+  QString str = "Hello";
+  str.append(" World");  // "Hello World"
+  ```
+
+#### 3.2. 字符串长度和访问
+- 获取字符串长度：
+  ```cpp
+  QString str = "Hello";
+  int length = str.length();  // 5
+  ```
+
+- 访问单个字符：
+  ```cpp
+  QChar ch = str.at(1);  // 'e'
+  ```
+
+#### 3.3. 查找和替换
+`QString` 提供了多种查找和替换子字符串的函数：
+
+- 查找子字符串：
+  ```cpp
+  QString str = "Hello, Qt!";
+  int index = str.indexOf("Qt");  // 返回子字符串首次出现的索引，结果是 7
+  ```
+
+- 替换子字符串：
+  ```cpp
+  QString str = "Hello, World!";
+  str.replace("World", "Qt");  // 结果是 "Hello, Qt!"
+  ```
+
+#### 3.4. 大小写转换
+- 转换为大写或小写：
+  ```cpp
+  QString str = "Hello";
+  QString upperStr = str.toUpper();  // "HELLO"
+  QString lowerStr = str.toLower();  // "hello"
+  ```
+
+#### 3.5. 截取字符串
+- 使用 `mid()` 截取部分字符串：
+  ```cpp
+  QString str = "Hello, Qt!";
+  QString substr = str.mid(7, 2);  // 结果是 "Qt"
+  ```
+
+- 使用 `left()` 和 `right()`：
+  ```cpp
+  QString leftStr = str.left(5);    // "Hello"
+  QString rightStr = str.right(3);  // "Qt!"
+  ```
+
+#### 3.6. 字符串分割
+- 使用 `split()` 按照分隔符拆分字符串：
+  ```cpp
+  QString str = "apple,banana,grape";
+  QStringList list = str.split(",");  // 拆分为 ["apple", "banana", "grape"]
+  ```
+
+#### 3.7. 转换为其他数据类型
+- 转换为整数、浮点数等：
+  ```cpp
+  QString str = "123";
+  int num = str.toInt();  // 123
+
+  QString floatStr = "123.45";
+  double num2 = floatStr.toDouble();  // 123.45
+  ```
+
+- 转换为字节数组：
+  ```cpp
+  QString str = "Hello";
+  QByteArray byteArray = str.toUtf8();  // UTF-8 编码的字节数组
+  ```
+
+### 4. **静态方法**
+#### 4.1. 创建字符串
+- 使用 `QString::number()` 方法从数值创建字符串：
+  ```cpp
+  QString str = QString::number(42);      // "42"
+  QString str2 = QString::number(3.1415); // "3.1415"
+  ```
+
+- 使用 `arg()` 格式化字符串：
+  ```cpp
+  QString str = QString("The value is %1").arg(42);  // "The value is 42"
+  ```
+
+### 5. **比较字符串**
+- 使用 `compare()` 方法比较两个字符串：
+  ```cpp
+  QString str1 = "apple";
+  QString str2 = "orange";
+  int result = QString::compare(str1, str2);  // < 0，因为 "apple" 在字典序中小于 "orange"
+  ```
+
+- 也可以使用 `==` 或 `!=` 比较字符串：
+  ```cpp
+  if (str1 == str2) {
+      // 字符串相等
+  }
+  ```
+
+### 6. **字符串的编码处理**
+`QString` 内部使用 UTF-16 存储字符，但可以轻松转换为其他编码格式，例如 UTF-8、Latin1 等。
+
+```cpp
+QString str = "你好，世界";
+QByteArray utf8String = str.toUtf8();  // 转换为 UTF-8 字节数组
+QByteArray latin1String = str.toLatin1();  // 转换为 Latin1 编码字节数组
+```
+
+### 7. **性能优化**
+`QString` 使用了引用计数（copy-on-write）的机制来优化性能，避免不必要的拷贝操作。当多个 `QString` 对象引用同一数据时，它们共享数据；只有当其中一个发生修改时，才会执行深拷贝。
+
+### 8. **使用 `QString` 与 `QByteArray` 的转换**
+`QByteArray` 是字节数组类，而 `QString` 是 Unicode 字符串类，它们可以互相转换。
+
+```cpp
+QString str = "Hello";
+QByteArray byteArray = str.toUtf8();  // 将 QString 转换为 QByteArray
+
+QString str2 = QString::fromUtf8(byteArray);  // 将 QByteArray 转换回 QString
+```
+
+### 9. **处理空字符串**
+- `isEmpty()` 和 `isNull()` 用于判断字符串是否为空或为 `null`：
+  ```cpp
+  QString str;
+  bool empty = str.isEmpty();  // true，因为是空字符串
+  bool null = str.isNull();    // true，因为没有分配任何值
+  ```
+
+### 10. **总结**
+`QString` 是一个功能强大的类，能够处理各种复杂的字符串操作。它的 Unicode 支持使其在处理多语言字符时特别有效，且提供了高效的性能优化措施。
+
 ## Qt QVector 详解
 
 `QVector` 是 Qt 框架中用于存储相同类型元素的动态数组类，类似于 C++ 标准库的 `std::vector`。它提供了许多方便的接口来进行动态分配、访问和操作数据。下面是对 `QVector` 的详解。
