--- a/Books/2024-09-05-C++程序设计语言-第四部分标准库.md
+++ b/Books/2024-09-05-C++程序设计语言-第四部分标准库.md
@@ -421,3 +421,177 @@ void f2(initializer_list<int> lst)
 + 赋值操作并不拷贝或移动分配器，目标容器获得了一组新的元素，但会保留其旧分配器，新元素(如果有的话)的空间也是用此分配器分配的。
 + 谨记，一个构造函数或是一次元素拷贝可能会抛出异常，来指出它无法完成这个任务
 + 紧急，**对大小初始化器使用 (),而对其他所有初始化器都是用 {}**
++ 容器通常都很大，因此我们几乎总是以引用方式传递容器实参。但是，由于容器是资源句柄，我们可以高效地以返回值的方式返回容器(隐含使用移动操作)。类似地，当我们不想用别名的时候，可以用移动方式传递容器实参。
+
+#### 31.3.3 大小和容量
+
++ 大小是指容器中的元素数目；容量是指在重新分配更多内存之前容器能够保存的元素数目。
++ 在改变大小或容量时，元素可能会被移动到新的存储位置。这意味着指向元素的迭代器(以及指针和引用)可能会失效(即，指向旧元素的位置)
++ 指向关联容器(例如map)元素的迭代器只有当所指元素从容器中删除(erase())时才会失效。与之相反，指向顺序容器(例如vector)元素的迭代器当元素重新分配空间(例如resize(), reverse()或push_back())或所指元素在容器中移动(例如在前一个位置进行erase()或insert())时也会失效。
+
+#### 31.3.4 迭代器
+
++ 容器可以看作按容器迭代器定义的顺序或相反的顺序排列的元素序列。对一个关联容器，元素的序由容器比较标准(默认为 < )决定
++ 元素遍历的最常见形式是从头至尾遍历一个容器。最简单的遍历方法是使用范围for语句，它隐含的使用了begin()和end()
++ 当我们需要了解一个元素在容器中的位置或需要同时引用多个元素时，就要直接使用迭代器。在这些情况下，auto很有用，它能帮助尽量简化代码并减少输入错误。
+
+#### 31.3.5 元素访问
+
+#### 31.3.6 栈操作
+
++ 标准vector,deque和list(不包括forward_list和关联容器)提供了高效的元素序列尾部操作
++ 栈操作
+  + c.push_back(x) 将x添加到c的尾元素之后(使用拷贝或移动)
+  + c.pop_back() 删除c的尾元素
+  + c.emplace_back(args) 用args构造一个对象，将它添加到c的尾元素之后
+
++ c.push_back(x)将x移动或拷贝入x，这会将c的大小增加1。如果内存耗尽或x的拷贝构造函数抛出一个异常，c.push_back(x)会失败。push_back()失败不会对容器造成任何影响，因为标准库操作都提供了强保证。
+
+#### 31.3.7 列表操作
+
+#### 31.3.8 其他操作
+
++ 容器可以比较和交换
++ swap()操作既交换元素也交换分配器
+
+### 31.4 容器
+
+#### 31.4.1 vector
+
++ STL的vector是默认容器--除非你有充分理由，否则应该使用它。如果你希望使用链表或内置数组替代vector，应慎重考虑后再做决定。
+
+##### 31.4.1.1 vector和增长
+
++ 使用大小(元素数目)和容量(不重新分配空间的前提下可容纳的元素数目)零push_back()操作时的向量增长相当高效：不会在添加每个元素时都分配内存，而是在超出容量时才进行一次重新分配。C++标准并未指出超出容量时向量的增长幅度，但很多C++实现都是增加大小的一半。
++ 容量的概念令指向vector元素的迭代器只有在真正发生重分配时才会失效。
+
+#### 31.3.1.2 vector和嵌套
+
++ 与其他数据结构相比，vector(以及类似的连续存储元素的数据结构)有三个主要优势
+  + vector的元素是紧凑存储的：所有元素都不存在额外的内存开销。类型为vector<X>的vec的内存消耗大致为 sizeof(vector<x>) + vec.size() * sizeof(x)。其中sizeof(vector<x>) 大约为12个字节，对大向量而言是微不足道的
+  + vector的遍历非常快。为访问下一个元素，我们不必利用指针间接寻址，而且对类vector结构上的连续访问，现代计算机都进行了优化。这使得vector元素的线性扫描(就像find()和copy()所做的)接近最优
+  + vector支持简单且高效的随机访问。这使得vector上的很多算法(例如sort()和binary_search())非常高效
+
+#### 31.3.1.3 vector和数组
+
++ **vector是一种资源句柄**，这是允许改变大小和实现高效移动语义的原因。但是这一特点偶尔也会变为缺点--尤其是与不依赖于元素和句柄分离存储的数据结构(例如内置数组和array)相比。将元素序列保存在栈中或另一个对象中可能会带来性能上的优势。
+
+#### 31.3.1.4 vector和string
+
++ vector<char>是可改变大小，连续存储的char序列，string也是如此。那么我们应该如何在两者之间进行选择呢
++ vector是一种保存值的通用机制，并不对保存的值之间的关系做任何假设。对一个vector<char>而言，字符串Hello,World只不过是一个13个char类型的元素的序列而已。与之相反，string的设计目的就是保存字符序列，它认为字符间的关系是非常重要的。因此，我们很少会对string中的字符进行排序，因为这会破坏字符串的含义。某些string操作反映了这一点(例如c_str(), >> 和 find() C风格字符串以0结束)。string的实现也反映了对其使用方式的假设。
+
+### 31.4.2 链表
+
++ STL提供了两种链表类型
+  + list：双向链表
+  + forward_list：单向链表
++ list为元素插入和删除操作进行了优化。当你向一个list插入元素或是从一个list删除元素时，list中其他元素的位置不会受到影响。特别的是，指向其他元素的迭代器也不会受到影响。
+
++ 默认情况下，list的元素都独立分配内存空间，而且要保存指向前驱和后继的指针。与vector相比，每个list元素占用更多内存空间(通常每个元素至少多4个字)，遍历(迭代)操作也要慢得多，因为需要通过指针进行间接寻址而不是简单的连续访问。
++ forward_list是单向链表。你可以将其看作一种为空链表或很短的链表专门优化的数据结构，对这类链表的操作通常是从头开始遍历。
+
+### 31.4.3 关联容器
+
++ 关联容器支持基于关键字的查找。它有两个变体
+  + 有序关联容器(ordered associative container)基于一个序标准(默认是小于比较操作 <)进行查找。这类容器用平衡二叉树实现，通常是红黑树
+  + 无序关联容器(unordered associative container)基于一个哈希函数进行查找。这类容器用哈希表实现，采用溢出链表策略。
++ 两类容器都支持
+  + map: {键，值}对序列
+  + set: 不带值的map(或者你可以说关键字就是值)
++ 最后，映射和集合，无论是有序还是无序的，都有两个变体
+  + 普通映射或集合：每个关键字只有唯一一项
+  + 多重映射或集合：每个关键字可对应多项。
++ 一个关联容器的名字指出了它在三维空间{集合|映射，普通|无序，普通|多重}中的位置。
+
+#### 31.4.3.1 有序关联容器
+
++ 实际上，[]并不仅仅是insert()的简写形式，它所做的要更多一些。m[k]的结果等价于 (*(m.insert(make_pair(k,v{})).first)).second，其中V是映射类型。insert(make_pair())这种描述方式相当冗长，我们可以用emplace()取而代之：dictionary.emplace("sea cow", "extinct");
+
++ **关联容器中元素的关键字是不可变的**。因此，我们不能改变set中的值。我们甚至不能改变不参与比较的元素的成员。如果需要修改元素，应使用map。不要尝试修改关键字：假如你成功了，就意味着查找元素的底层机制会崩溃。
+
+#### 31.4.3.2 无序关联容器
+
++ 无序关联容器都是用哈希表实现的。对简单应用而言，无序关联容器与有序容器的差别不大，因为关联容器共享大部分操作。
++ unordered_map的遍历顺序取决于插入顺序，哈希函数和装载因子。特别是，元素的遍历顺序并不保证与其插入顺序一致。
+
+#### 31.4.3.3 构造unordered_map
+
+#### 31.4.3.4 哈希和相等判定函数
+
++ 用户可以自定义哈希函数，定义方式有多种，不同的技术可满足不同的需求。
+
+#### 31.4.3.5 装载因子和桶
+
++ 无序容器实现的重要部分对程序员是可见的。我们说具有相同哈希值的关键字 落在同一个桶中。程序员也可以获取并设置哈希表的大小。
++ 无序关联容器的装载因子(load factor)定义为已用空间的比例。例如，若capacity()为100个元素，size()为30，则load_factor()为0.3
++ 桶接口的一个用途是允许对哈希函数进行实验: 一个糟糕的哈希函数会导致某些关键字值的bucket_count()异常大，即，很多关键字被映射为相同的哈希值。
+
+### 31.5 容器适配器
+
++ 容器适配器(container adaptor)为容器提供不同的(通常是受限的)的接口。容器适配器的设计用法就是仅通过其特殊接口使用。特别是，STL容器适配器不提供直接访问其底层容器的方式，也不提供迭代器或下标操作。
++ 从一个容器创建容器适配器的技术是一种通用的按用户需求非侵入式适配类接口的技术。
+
+#### 31.5.1 stack
+
++ stack是一个容器接口，容器类型是作为模板实参传递给它的。stack通过接口屏蔽了其底层容器上的非栈操作，接口采用常规命名: top(), push()和pop()
++ 此外，stack还提供了常用的比较运算符(==, <等)和非成员函数swap()
++ 默认情况下，stack用deque保存其元素，但任何提供back(),push_back()和pop_back()操作的序列都可使用。例如
+```cpp
+stack<char> s1;   // 使用deque<char>保存元素
+stack<int, vector<int>> s2;  // 使用vector<int>保存元素
+```
++ vector通常比deque更快，使用内存也更少
++ stack对底层容器使用push_back()来添加元素。因此，只要机器还有可用内存供容器申请，stack就不会溢出。
++ 默认情况下，stack使用其底层容器的分配器。如果这不够，有几个构造函数可以指定分配器。
+
+#### 31.5.2 queue
+
++ queue定义在<queue>中，它是一个容器接口，允许在back()中插入元素，在front()中提取元素
+
+#### 31.5.3 priority_queue
+
++ priority_queue是一种队列，其中每个元素都被赋予一个优先级，用来控制元素被top()获取的顺序。priority_queue的声明非常像queue，只是多了处理一个比较对象的代码和一组从序列进行初始化的构造函数。
++ 默认情况下,priority_queue简单的用 < 运算符比较元素，用top()返回优先级最高的元素
+
+### 31.5 建议
+
++ 一个STL容器定义一个序列
++ 将vector作为默认容器使用
++ insert()和push_back()这样的插入操作在vector上通常比在list上更高效
++ 将forward_list用于通常为空的序列
++ 当设计性能时，不要盲目信任你的直觉，而要进行测试
++ 不要盲目信任渐进复杂性度量；某些序列很短而单一操作的代价差异可能很大
++ STL容器都是资源句柄
++ map通常实现为红黑树
++ unordered_map是哈希表
++ STL容器的元素类型必须提供拷贝和移动操作
++ 如果你希望保持多态行为，使用指针或智能指针的容器
++ 比较操作应该实现一个严格弱序
++ 以传引用方式传递容器参数，以传值方式返回容器
++ 对一个容器，用()初始化器初始化大小，用{}初始化器语法初始化元素列表
++ 用范围for循环或首位迭代器对容器进行简单遍历
++ 如果不需要修改容器元素，使用const迭代器
++ 当使用迭代器时，用auto避免冗长易错的输入
++ 用reserve()壁面指向容器元素的指针和迭代器失效
++ 未经测试不要假定reserve()会有性能收益
++ 使用容器上的push_back()或resize()，而不是数组上的realloc()
++ vector和deque改变大小后，不要继续使用其上的迭代器
++ 在需要时使用reserve()令性能可预测
++ 不要假定[]会进行范围检查
++ 当需要保证进行范围检查时使用at()
++ 用emplace()方便符号表示
++ 优选紧凑连续存储的数据结构
++ 用emplace()避免提前初始化元素
++ 遍历list的代价相对较高
++ list一般会有每个元素四个字的额外内存开销
++ 有序容器序列由其比较对象(默认为 <)定义
++ 无序容器(哈希容器)序列并无可预测的序
++ 如果你需要在大量数据中快速查找元素，使用无序容器
++ 对五自然序的元素类型，使用无序容器
++ 如果需要按顺序遍历元素，使用有序关联容器
++ 用实验检查你的哈希函数是否可以接受
++ 用异或操作组合标准哈希函数得到的哈希函数通常有很好的性能
++ 0.7通常是一个合理的装载因子
++ 你可以为容器提供其他接口
++ STL适配器不提供对其底层容器的直接访问
