--- a/Windows/2024-05-22-windows_03_常用技巧.md
+++ b/Windows/2024-05-22-windows_03_常用技巧.md
@@ -10,6 +10,15 @@ last_modified_date: 2024-06-29 11:00:00 +0800
 
 + windows系统下常用技巧
 
+## 笔记本CPU利用率卡在16%不动，电脑很卡
+
++ 有时候笔记本电脑开机后巨卡顿，开啥都慢，打开任务管理器看CPU利用率卡在15%不懂
+
++ 这种情况是因为电源问题导致CPU频率被锁住了。要么是电源设置有问题，要么是硬件有问题
+  + 先检查任务栏的电源设置是不是最佳性能
+  + 还不正常的话，就把充电器拔下来，放个几秒再插回去。两头都要拔，因为不能保证是插座那头还是插电脑那头没有接好。(这这个方法解决了我的问题，奈斯)
+  + 如果仍然不正常，就看看其他的吧
+
 ## windows 查看端口占用
 
 要查看 Windows 系统中端口的占用情况，可以使用以下几种方法：
