--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -1880,3 +1880,11 @@ last_modified_date: 2024-07-30 10:00:00 +0800
       + 日志更新 [done]
       + 装板机器人状态机模块开发 
         + 贴合状态框架搭建 [done]
+
++ 09.14
+  + 工作
+    + 机器人bug修复，代码三个分支同步 [done]
+    + 手动模块 举升位置分为两个阶段，先判断0-8个轴是否到达B点，到达之后再单独控制9轴运动
+    + 下午调试倍福控制器
+  + 其他
+    + 解决vscode 代码无法补全问题
