--- a/C++/C++_10_标准库/2024-05-22-C++_10_3_vector.md
+++ b/C++/C++_10_标准库/2024-05-22-C++_10_3_vector.md
@@ -10,6 +10,86 @@ last_modified_date: 2024-07-24 10:00:00 +0800
 
 + <vector>标准库相关笔记
 
+## C++ std::vector和C风格数据互相转换
+
+在C++中，`std::vector` 是一个动态数组，而C风格的数据通常是指使用指针和数组来管理数据。在实际开发中，有时需要在 `std::vector` 和 C 风格数组之间进行互相转换。下面是具体的转换方式：
+
+### 1. 从 C 风格数组转换为 `std::vector`
+
+假设有一个C风格的数组：
+```cpp
+int c_array[] = {1, 2, 3, 4, 5};
+```
+
+要将它转换为 `std::vector`：
+```cpp
+#include <vector>
+
+std::vector<int> vec(std::begin(c_array), std::end(c_array));
+```
+
+**说明：**
+- 使用 `std::begin()` 和 `std::end()` 来获取数组的首尾指针（或使用 `&c_array[0]` 和 `&c_array[size]`）。
+- 如果知道数组的长度，你可以直接指定长度：
+  ```cpp
+  int size = 5;
+  std::vector<int> vec(c_array, c_array + size);
+  ```
+
+### 2. 从 `std::vector` 转换为 C 风格数组
+
+假设有一个 `std::vector`：
+```cpp
+std::vector<int> vec = {1, 2, 3, 4, 5};
+```
+
+要将其转换为 C 风格的数组，你可以获取 `vector` 的内部数据指针：
+```cpp
+int* c_array = vec.data();
+```
+
+**说明：**
+- `vec.data()` 返回一个指向 `std::vector` 内部存储数据的指针，该数据是连续的，与C风格数组类似。
+- 注意：不要手动释放这个指针，因为它是由 `std::vector` 管理的。
+
+### 3. 完整示例
+
+```cpp
+#include <iostream>
+#include <vector>
+
+int main() {
+    // 从C风格数组转换为std::vector
+    int c_array[] = {1, 2, 3, 4, 5};
+    std::vector<int> vec(std::begin(c_array), std::end(c_array));
+
+    // 输出std::vector的内容
+    std::cout << "Vector: ";
+    for (const auto& elem : vec) {
+        std::cout << elem << " ";
+    }
+    std::cout << std::endl;
+
+    // 从std::vector转换为C风格数组
+    int* c_array_from_vec = vec.data();
+
+    // 输出C风格数组的内容
+    std::cout << "C array: ";
+    for (size_t i = 0; i < vec.size(); ++i) {
+        std::cout << c_array_from_vec[i] << " ";
+    }
+    std::cout << std::endl;
+
+    return 0;
+}
+```
+
+### 注意事项
+- 当从 `std::vector` 获取到 C 风格的指针时，不要手动释放内存，因为 `std::vector` 会自动管理其内存。
+- 从 C 风格数组转换为 `std::vector` 时，尽量使用 `std::begin()` 和 `std::end()` 来避免出错。
+
+通过这些方法，你可以轻松地在C++的 `std::vector` 和C风格数据之间进行转换。
+
 ## vector 内存分配方案
 
 + vector会自动分配内存来保存插入的元素。vector要求必须放在连续的内存中。由于不可能请求在当前的内存块的尾部添加内存，因此每次vector申请更多内存时，都一定要在另一个位置分配一块新的，更大的内存块，然后将所有元素复制/移动到新的内存块。
