--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -10,7 +10,7 @@ last_modified_date: 2024-07-30 10:00:00 +0800
 
 + 2024年工作笔记
 
-## 20240101 - 20240107
+## 2024.01.01 - 2024.01.07
 
 + 01.01
   + holiday
@@ -55,7 +55,7 @@ last_modified_date: 2024-07-30 10:00:00 +0800
   + vcr_0.5
     + 工作流设计
 
-## 20240108 - 20240114
+## 2024.01.08 - 2024.01.14
 
 + 01.08
   + vcr
@@ -1888,3 +1888,41 @@ last_modified_date: 2024-07-30 10:00:00 +0800
     + 下午调试倍福控制器
   + 其他
     + 解决vscode 代码无法补全问题
+
++ 09.15
+  + 放假
+
+## 2024.09.16 - 2024.09.22
+
++ 09.16
+  + 放假
+
++ 09.17
+  + 放假
+
++ 09.18
+  + 工作
+    + 合并最新代码
+  + 其他
+    + 熟悉visual studio开发
+
++ 09.19
+  + 工作
+
++ 09.20
+  + 合并最新代码
+  + 获取放板位和碰钉位
+  + 学习SVN
+
++ 09.21
+  + 放假
+
++ 09.22
+  + 放假
+
+## 2024.09.23 - 2024.09.29
+
++ 09.23
+  + 工作
+    + 模拟传感器数据测试任务流程 [done]
+    + 工装硬件测试
