--- a/Books/2024-09-05-C++程序设计语言-第四部分标准库.md
+++ b/Books/2024-09-05-C++程序设计语言-第四部分标准库.md
@@ -554,7 +554,7 @@ stack<int, vector<int>> s2;  // 使用vector<int>保存元素
 + priority_queue是一种队列，其中每个元素都被赋予一个优先级，用来控制元素被top()获取的顺序。priority_queue的声明非常像queue，只是多了处理一个比较对象的代码和一组从序列进行初始化的构造函数。
 + 默认情况下,priority_queue简单的用 < 运算符比较元素，用top()返回优先级最高的元素
 
-### 31.5 建议
+### 31.6 建议
 
 + 一个STL容器定义一个序列
 + 将vector作为默认容器使用
@@ -595,3 +595,25 @@ stack<int, vector<int>> s2;  // 使用vector<int>保存元素
 + 0.7通常是一个合理的装载因子
 + 你可以为容器提供其他接口
 + STL适配器不提供对其底层容器的直接访问
+
+## 第三十二章 STL算法
+
+### 32.1 引言
+
++ STL包含标准库中的迭代器，容器，算法和函数对象几个部分
+
+### 32.2 算法
+
++ <algorithm>中定义了大约80个标准算法。
++ 很多算法都遵循一种常规表示方式: 返回序列的末尾来表示 未找到。
++ 无论是标准库算法还是用户自己设计的算法，都很重要
+  + 每个算法命名一个特定操作，描述其接口，并指定其语义
+  + 每个算法都可能广泛使用并被很多程序员熟知
+
++ 如果你发现你写的一段代码有若干看起来没什么关联的循环，局部变量，或是有很复杂的控制结构，那么就应该考虑是否可以简化代码，将某些部分改写为具有描述性的名字以及良好定义的目的，接口和依赖关系的函数/算法。
+
+#### 32.2.1 序列
+
++ 标准库算法的理想目标是为可优化实现的某些东西提供最通用最灵活的接口。
++ 注意，无论一个STL算法返回什么，它都不会是实参的容器。传递给STL算法的实参是迭代器，算法完全不了解迭代器所指向的数据结构。
++ 迭代器的存在主要是为了将算法从它所处理的数据结构上分离开来，反之亦然。
