--- a/Books/2024-09-05-C++程序设计语言-第四部分标准库.md
+++ b/Books/2024-09-05-C++程序设计语言-第四部分标准库.md
@@ -617,3 +617,75 @@ stack<int, vector<int>> s2;  // 使用vector<int>保存元素
 + 标准库算法的理想目标是为可优化实现的某些东西提供最通用最灵活的接口。
 + 注意，无论一个STL算法返回什么，它都不会是实参的容器。传递给STL算法的实参是迭代器，算法完全不了解迭代器所指向的数据结构。
 + 迭代器的存在主要是为了将算法从它所处理的数据结构上分离开来，反之亦然。
+
+### 32.8 建议
+
++ STL算法操作一个或多个序列
++ 一个输入序列是一个半开区间，由一对迭代器定义
++ 进行搜索时，算法通常返回输入序列的末尾位置表示 未找到
++ 优选精心说明的算法而非 随意代码
++ 当你要编写一个循环时，思考它是否可以表达为一个通用算法
++ 确保一对迭代器实参确使指定了一个序列
++ 当迭代器对风格显得冗长时，引入容器/范围版本的算法
++ 用谓词和其他函数对象赋予标准算法更宽泛的含义
++ 谓词不能修改其实参
++ 指针上默认的==和 < 极少能满足标准算法的需求
++ 了解你使用的算法的时间复杂性，但要记住复杂性评价只是对性能的粗略引导
++ 只在对一个任务没有更专用的算法时使用 for_each() 和 transform()
++ 算法并不直接向其实参序列添加元素或从其中删除元素
++ 如果不得不处理未初始化的对象，考虑 uninitialized_* 系列算法
++ STL算法基于其排序比较操作实现相等性比较
++ 注意，排序和搜索C风格的字符串要求用户提供一个字符串比较操作。
+
+## 第三十三章 STL迭代器
+
+### 33.1 引言
+
++ 迭代器是标准库算法和所操作的数据间的粘合剂。反过来，也可以说迭代器机制是为了最小化算法与所操作的数据结构间的依赖性
+
+#### 33.1.1 迭代器模型
+
++ 与指针类似，迭代器提供了简介访问的操作(例如解引用操作 *)和移动到新元素的操作(例如，++操作移动到下一个元素)。一对迭代器定义一个半开区间 [begin:end)，即所谓序列(sequence)
+  + 即，begin指向序列的首元素，end指向序列的尾元素之后的位置。永远也不要从 *end 读取数据，也不要向它写入数据。
+  + 注意，空序列满足 begin == end；即，对任意迭代器p都有 [p:p)是空序列
++ 为了 读取一个序列，算法通常接受一对表示半开区间[begin:end)的迭代器(b, e)，并使用++编译序列直至到达末尾
+
+#### 33.1.2 迭代器类别
+
++ 标准库提供了五种迭代器
+  + 输入迭代器(input iterator): 利用输入迭代器，我们可以用++向前遍历序列并用*(反复)读取每个元素。我们可以用==和!=比较输入迭代器。istream提供了这种迭代器
+  + 输出迭代器(output iterator): 利用输出迭代器，我们可以用++向前遍历序列并用*每次写入一个元素。ostream提供了这种迭代器
+  + 前向迭代器(forward iterator): 利用前向迭代器，我们可以反复使用++向前遍历序列并用*读写元素(除非元素是const的)。如果一个前向迭代器指向一个类对象我们可以用->访问其成员。我们可以用==和!=比较前向迭代器。forward_list提供了这种迭代器
+  + 双向迭代器(bidirection iterator): 利用双向迭代器，我们可以向前(用++)和向后(用--)遍历序列并用*(反复)读写元素(除非元素是const的)。如果一个双向迭代器指向一个类对象，我们可以用->访问其成员。我们可以用==和!=比较双向迭代器。list，map和set提供了这种迭代器
+  + 随机访问迭代器(random-access iterator): 对一个随机访问迭代器，我们可以用[]进行下标操作，用+加上一个整数，以及用-减去一个整数。我们可以将指向同一个序列的两个随机访问迭代器相减来获得他们的距离。我们可以用==,!=,<=, >和>=比较双向迭代器。vector提供了这种迭代器
+
++ **这些迭代器类别是概念而非类**，因此这个层次并非用继承实现的类层次。如果你希望用迭代器类别做一些更进阶的事情，可(直接或间接)使用iterator_traits。
+
+#### 33.1.3 迭代器萃取
+
++ 迭代器标签的本质是类型，用来基于迭代器类型选择算法。
++ 关键思路是：为了获得迭代器的属性，你应该访问其 iterator_traits而不是迭代器本身
+
+#### 33.1.4 迭代器操作
+
+### 33.2 迭代器适配器
+
++ 在<iterator>中，标准库提供了适配器，能从一个给定的迭代器类型生成有用的相关迭代器类型
+  + reverse_iterator 反向遍历
+  + back_insert_iterator 在尾部插入
+  + front_insert_iterator 在头部插入
+  + insert_iterator 在任意位置插入
+  + move_iterator 移动而不是拷贝
+  + raw_storage_iterator 写入未初始化的存储空间
+
+### 33.4 函数对象
+
++ 很多标准库算法接受函数对象(或函数)参数，来控制其工作方式。常见的函数对象包括比较标准，谓词(返回bool的函数)和算术运算。在<functional>中，标准库提供了若干常用函数对象。
+
+### 33.5 函数适配器
+
++ 函数适配器接受一个函数参数，返回一个可用来调用该函数的函数对象。
+  + g = bind(f, args) 
+    + g(args2)等价于f(args3)是通过用args2中的实参替换args中对应的占位符(例如 _1, _2, _3)得到的
+  + g - mem_fn(f) 若p是一个指针，则g(p, args)表示p->f(args)，否则g(p, args)表示p.mf(args); args是一个实参列表
+  + g = 
