--- a/Personal/2024-05-22-资金.md
+++ b/Personal/2024-05-22-资金.md
@@ -190,3 +190,15 @@ tag: Personal
   + 日常开销: 1250 + 2000+ = 3250+
   + 剩余: 3432.29 - 3250 = 182.29
   + 九月份工资预计: 10140
+
+## 2024.09.25
+
++ 当前余额
+  + 微信: 264.95
+  + 招商: 252.46
+  + 中国: 8652.03
+  + 总计: 9196.44
+
++ 未来规划
+  + 现在的钱用过西藏旅行
+  + 下个月再存钱
