--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -1926,3 +1926,19 @@ last_modified_date: 2024-07-30 10:00:00 +0800
   + 工作
     + 模拟传感器数据测试任务流程 [done]
     + 工装硬件测试
+
++ 09.24
+  + 工作
+    + 工装硬件测试
+    + IO板调试
+
++ 09.25
+  + 工作
+    + 现场调试
+
++ 09.26
+  + 定时器实现
+  + 找到一个更好的方法替换计数法，需要解决的问题：
+    + 启动一个设备，瞬时启动，但不知道什么时间停止。所以约定一个时间段，当走完时间段即表示设备运动结束，给出一个信号。
+    + 在设备运行期间，主线程不会阻塞，可以随时终止设备的运行
+    + 设备运行结束后主线程可以知道设备结束了
