--- a/Project/rk_工地盒子/rk_doc/2024-05-22-1-0_镜像发行.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-22-1-0_镜像发行.md
@@ -16,7 +16,7 @@ docker run -d --privileged=true --restart=always --network=host -v /userdata/:/u
 
 + 打包命令
 ```bash
-tar -cvf rk_image.tar --exclude=/sys --exclude=/system --exclude=/proc --exclude=rk_image.tar --exclude=/userdata --exclude=/dev/media0 --exclude=/dev/galcore --exclude=/rk_usr --exclude=/tmp/* --exclude=/root  /
+tar -cvf rk_image.tar --exclude=/sys --exclude=/system --exclude=/proc --exclude=rk_image.tar --exclude=/userdata --exclude=/dev/media0 --exclude=/dev/galcore --exclude=/rk_usr --exclude=/tmp/* --exclude=/root --exclude=/data/static/warning_pictures/* /
 ```
 
 ## 20230707
@@ -312,4 +312,21 @@ cat /userdata/rk_image.tar | docker import - rk1126:20240807
 + 启动容器命令
 ```bash 
 docker run -d --privileged=true --restart=always --network=host --log-opt max-size=10m --log-opt max-file=3  -v /userdata/:/userdata/ -v /tmp/:/tmp/ -v /dev/galcore:/dev/galcore -v /usr/:/rk_usr/ --device=/dev/galcore  rk1126:20240807 /bin/bash /data/static/bash/auto-run.sh
+```
+
+## 20240928
+
++ v20版本镜像
+
++ vca
+  + 修复任务无法自启动问题
+
++ 加载镜像命令
+```bash
+cat /userdata/rk_image.tar | docker import - rk1126:20240928
+```
+
++ 启动容器命令
+```bash 
+docker run -d --privileged=true --restart=always --network=host --log-opt max-size=10m --log-opt max-file=3  -v /userdata/:/userdata/ -v /tmp/:/tmp/ -v /dev/galcore:/dev/galcore -v /usr/:/rk_usr/ --device=/dev/galcore  rk1126:20240928 /bin/bash /data/static/bash/auto-run.sh
 ```
