--- a/Project/rk_工地盒子/rk_doc/2024-05-22-1-0_镜像发行.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-22-1-0_镜像发行.md
@@ -16,6 +16,12 @@ docker run -d --privileged=true --restart=always --network=host -v /userdata/:/u
 
 + 打包命令
 ```bash
+# 清除任务 -- 界面手动操作
+
+# 清除告警记录
+curl -X GET http://127.0.0.1:8000/api/setting/warning_record/clear
+
+# 制作镜像文件
 tar -cvf rk_image.tar --exclude=/sys --exclude=/system --exclude=/proc --exclude=rk_image.tar --exclude=/userdata --exclude=/dev/media0 --exclude=/dev/galcore --exclude=/rk_usr --exclude=/tmp/* --exclude=/root --exclude=/data/static/warning_pictures/* /
 ```
 
