--- a/Books/2024-09-05-C++程序设计语言-第四部分标准库.md
+++ b/Books/2024-09-05-C++程序设计语言-第四部分标准库.md
@@ -687,5 +687,266 @@ stack<int, vector<int>> s2;  // 使用vector<int>保存元素
 + 函数适配器接受一个函数参数，返回一个可用来调用该函数的函数对象。
   + g = bind(f, args) 
     + g(args2)等价于f(args3)是通过用args2中的实参替换args中对应的占位符(例如 _1, _2, _3)得到的
-  + g - mem_fn(f) 若p是一个指针，则g(p, args)表示p->f(args)，否则g(p, args)表示p.mf(args); args是一个实参列表
-  + g = 
+  + g = mem_fn(f) 若p是一个指针，则g(p, args)表示p->f(args)，否则g(p, args)表示p.mf(args); args是一个实参列表
+  + g = not1(f) g(x)表示!f(x)
+  + g = not2(f) g(x, y) 表示 !f(x, y) 
+
+#### 33.5.3 function
+
++ 我们可以直接使用bind()，以及用它来初始化auto变量。从这个角度看，bind()很像是一个lambda
++ 标准库function是一种类型，它可以保存你能调用运算符()调用的任何对象。即，一个function类型对象就是一个函数对象
++ 显然，function对回调，将操作作为参数传递等机制非常有用
+
+### 33.6 建议
+
++ 一个输入序列由一对迭代器定义
++ 一个输出序列由单一迭代器定义；程序员应负责避免溢出
++ 对任意迭代器p，[p:p)是一个空序列
++ 使用序列列尾表示 未找到
++ 将迭代器理解为更通用，通常行为也更好的指针
++ 使用迭代器类型，例如 list<char>::iterator，而不是指向容器中元素的指针
++ 用iterator_traits获取迭代器的相关信息
++ 可以用iterator_traits实现编译时分发
++ 用iterator_traits实现基于迭代器类别选择最优算法
++ 用base()从reverse_iterator提取iterator
++ 可以使用插入迭代器向容器添加元素
++ move_iterator可用来将拷贝操作变为移动操作
++ 确认你的容器可用范围for语句遍历
++ 用bind()创建函数和函数对象的变体
++ 注意bind()会提前解引用；如果你希望推迟解引用，使用ref()
++ 可使用mem_fn()或lambda将p->f(a)调用规范转换为f(p, a)
++ 如果你需要一个可以保存各种可调用对象的变量，使用function
+
+## 第三十四章 内存和资源
+
+### 34.1 引言
+
++ STL时标准库中高度结构化的，通用的数据管理和操作组件。本章介绍更为专用的以及处理裸内存的(与处理强类型对象相对)组件
+
+### 34.2 拟容器
+
++ 标准库中有一些容器不能很好的纳入STL框架，例如内置数组，array和string。我有时将他们称为拟容器。
+  + T[N]  固定大小的内置数组，连续存储的N个类型为T的元素，隐式转换为T*
+  + array<T,N>  固定大小的数组，连续存储的N个类型为T的元素，类似内置数组，但解决了大部分问题
+  + bitset<N>  固定大小的N个二进制的序列
+  + vector<bool> vector的特例化版本，紧凑保存二进制位序列
+  + pair<T, U>  两个元素，类型为T和U
+  + tuple<T...>  任意数目任意类型的元素的序列
+  + basic_string<C>  类型为C的字符的序列，提供了字符串操作
+  + valarray<T>  类型为T的数值的数组，提供了数值运算
+
++ 为什么标准库会提供这么多容器？这是为了满足很多常见但又有差异(通常也有重叠)的需求。如果标准库不提供这些容器，很多人将不得不自己实现。例如
+  + pair和tuple是异构的，所有其他容器都是同构的(元素都是相同类型)
+  + array, vector和tuple连续保存元素；forward_list和map是链式结构
+  + bitset和vector<bool>保存二进制位，通过代理对象访问这些二进制位；所有其他标准库容器都可以保存不同类型并直接访问元素
+  + basic_string要求其元素位某种字符类型，它提供了字符串操作，例如连接操作和区域敏感操作，valarray要求其元素为数值类型，并提供数值运算。
+
+#### 34.2.1 array
+
++ array定义在<array>中，是固定大小的给定类型的元素的序列，元素数目在编译时指定。因此，连同其元素可以在栈中，对象内或静态存储中分配空间。
++ array在哪个作用域中定义，元素就会在其中分配。理解array的最好方式是将其视为固定大小的内置数组，但不会隐式的，出乎意料地转换为指针类型，且提供了一些便利的函数
++ array中不保存任何管理信息(例如大小)。这意味着移动一个array比拷贝它更为高效(除非array的元素是资源句柄，且定义了高效的移动操作)。array没有构造函数或分配器(因为它不直接分配任何东西)
++ array的元素数目和下标值是unsigned类型(size_t)
+
++ 元素数目必须是一个常量表达式
++ 如果需要可变元素数目，应该使用vector。另一方面，由于array的元素数目在编译时即知，array的size()是一个constexpr函数
++ 如果需要，可以将一个array作为指针显式的传递给一个C风格的函数
+
++ vector是如此灵活，我们为什么要使用array呢？
+  + 原因是array虽不如vector灵活，但更简单。少数情况下，直接访问分配在栈中的元素较之在自由存储空间中分配元素，然后通过vector(句柄)间接访问它们，最后将它们释放，会有巨大的性能优势。
+  + 当然另一方面，栈是一个有限的资源(特别是在一些嵌入式系统中)，而栈溢出是非常糟糕的
+
++ 如果我们可以使用内置数组，又为什么要使用array呢？
+  + array了解自己的大小，因此很容易使用标准库算法，而且可以拷贝(用=或初始化)。
+  + 但是选择array的主要原因是，它使我不必为糟糕的指针转换头疼。
+
+#### 34.2.2 bitset
+
++ 一个bitset<N>就是一个包含N个二进制位的数组，它定义在<bitset>中。它与vector<bool>的不同之处是大小固定，与set的不同之处是二进制位用整数索引而不是关联值，与vector<bool>和set的共同差异是提供了操作二进制位的操作。
++ 用内置指针是不可能寻址一个二进制位的。因此，bitset提供了一种位引用(代理)类型。对那些由于某种原因不适合用内置指针寻址的对象，通常这种技术是很有用的解决方案
+
++ bitset设计中的一个关键思想是：能放入单个机器字中的bitset可优化实现。其接口反映了这一思想。
+
+#### 34.2.3 vector<bool>
+
++ vector<bool>定义在<vector>中，它是vector的一个特例化版本，提供了二进制(bool值)的紧凑存储
++ 显然，vector<bool>与bitset很相似，与bitset不同而与vector<T>相似的是，vector<bool>具有分配器，也能改变大小。
++ 类似vector<T>，vector<bool>中索引更大的元素保存在高地址。这与bitset的内存布局完全相反。而且标准库也提供将整数和字符串直接转换为vector<bool>的操作。
+
+#### 34.2.4 元组
+
++ 标准库提供了两种将任意类型的值组成单一对象的方法
+  + pair保存两个值
+  + tuple保存零个或多个值
++ 如果我们预先知道恰好有两个值，pair就很有用处了。而tuple用于我们必须处理任意多个值的情况
+
+### 34.3 资源管理指针
+
++ 一个指针指向一个对象(或不指向任何东西)。但是，指针并不能指出谁(如果有的话)拥有对象。即，仅仅查看指针，我们得不到任何关于"谁应(或是如何，或是是否)删除对象"的信息。
++ 在<memory>中，我们可以找到表达所有权的智能指针
+  + unique_ptr: 表示互斥的所有权
+  + shared_ptr: 表示共享的所有权
+  + weak_ptr: 可打破循环共享数据结构中的回路
+
+#### 34.3.1 unique_ptr
+
++ unique_ptr提供了一种严格的所有权语义
+  + 一个unique_ptr拥有一个对象，它保存一个指针(指向该对象)。即，unique_ptr有责任用所保护的指针销毁所指向的对象(如果有的话)
+  + unique_ptr不能拷贝(没有拷贝构造函数和拷贝赋值函数)，但是可以移动
+  + unique_ptr保存一个指针，当它自身被销毁时，使用关联的释放器(如果有的话)释放所指向的对象(如果有的话)
+
++ unique_ptr的用途包括
+  + 为动态分配的内存提供异常安全
+  + 将动态分配内存的所有权传递给函数
+  + 从函数返回动态分配的内存
+  + 在容器中保存指针
+
++ unique_ptr不提供拷贝构造函数和拷贝赋值运算符。
+
+#### 34.3.2 shared_ptr
+
++ shared_ptr表示共享所有权。当两段代码需要访问同一个数据，但两者都没有独享所有权(负责销毁对象)时，可以使用shared_ptr。shared_ptr是一种计数指针，当计数变为零时释放所指向的对象。
++ 我们可以将共享指针理解为包含两个指针的结构：一个指针指向对象，另一个指针指向计数器。
++ 释放器(deleter)用来在计数器变为零时释放共享对象。默认释放器通常是delete(它会调用对象的析构函数(如果存在的话)，并释放自由存储空间)
+
++ 当可以选择时
+  + 优先选择unique_ptr而不是shared_ptr
+  + 优先选择普通限域对象而不是在堆中分配空间，由unique_ptr管理所有权的对象
+
+#### 34.3.3 weak_ptr
+
++ weak_ptr指向一个shared_ptr所管理的对象。为了访问对象，可使用成员函数lock()将weak_ptr转换为shared_ptr。weak_ptr允许访问他人拥有的对象
+  + (仅)当对象存在时你才需要访问他
+  + 对象可能在任何时间被(其他人)释放
+  + 在对象最后一次被使用后必须调用其析构函数(通常释放非内存资源)
+
+### 34.4 分配器
+
++ STL容器和string都是资源句柄，获取和释放内存来保存其元素。为此，它们使用分配器(allocator)。分配器的基本目的是为给定类型提供内存资源以及提供在内存不再需要时将其归还的地方。
++ 基本的分配器函数有
+```cpp
+p = a.allocate(n);  // 为n个类型为T的对象获取空间
+a.deallocate(p, n);  // 释放p所指的保存n个类型为T的对象的空间
+```
+
+#### 34.4.1 默认分配器
+
++ 所有标准库容器都(默认)使用默认分配器，它用new分配空间，用delete释放空间
+
+### 34.5 垃圾收集接口
+
++ 垃圾收集(自动回收无引用的内存区域)有时被认为是万能灵药，但它并不是。特别是，垃圾收集器可能无法避免并非纯内存的资源的泄露，例如文件句柄，线程句柄以及锁。
++ 我将垃圾收集看作下列常见的防泄漏技术都已用尽时的最后一种方便的手段
+  + 只要可能，应使用具有正确语义的资源句柄来防止应用程序中的资源泄露。标准库提供了string, vector, unordered_map, thread, lock_guard以及其他很多资源句柄。移动语义允许从函数高效返回这类对象
+  + 使用unique_ptr保存这样的对象：不隐式管理其所拥有资源(例如指针)，需要免受不成熟释放机制之害或是需要特别关注分配方式(释放器)、
+  + 使用shared_ptr保存需要共享所有权的对象。
+
+### 34.6 未初始化内存
+
++ 大多数情况下，最好避免使用未初始化的内存。这样做可以简化编程，消除很多错误。
++ 除了标准的allocator，<memory>头文件还提供了fill*系列函数用于处理未初始化内存。
+
+### 34.7 建议
+
++ 当你需要一个具有constexpr大小的序列时，使用array
++ 优先选择array而不是内置数组
++ 当你需要N个二进制位而N又不到一定是整数类型的位宽时，使用bitset
++ 避免使用vector<bool>
++ 当使用pair时，考虑使用make_pair()进行类型推断
++ 当使用tuple时，考虑使用make_tuple()进行类型推断
++ 使用unique_ptr表示互斥所有权
++ 使用shared_ptr表示共享所有权
++ 尽量不适用weak_ptr
++ (仅)当由于逻辑上或性能上的原因，常用的new/delete语义不能满足需求时才使用分配器
++ 优先选择有特定语义的资源句柄而不是智能指针
++ 优先选择unique_ptr而不是shared_ptr
++ 优先选择智能指针而不是垃圾收集
++ 为通用资源的管理提供一致，完整的策略
++ 在大量使用指针的程序中处理泄露问题，垃圾收集是非常有用的
++ 垃圾收集是可选的
++ 不要伪装指针(即使你不使用垃圾收集)
++ 如果你使用垃圾收集，使用declare_no_pointers()令垃圾收集器忽略不可能包含指针的数据
++ 不要随机使用未初始化内存，除非你确使必须这么做。
+
+## 第三十五章 工具
+
+### 35.1 引言
+
++ 标准库提供了很多应用广泛的工具组件，但它们很难归到某类主要组件中。
+
+### 35.2 时间
+
++ 在<chrono>中，标准库提供了处理时间段和时间点的组件。
++ 我们通常希望对某事计时或做某些依赖于时间的事情。例如，标准库互斥量和锁提供了让thread等待一段时间(duration)或等待到给定时刻(time_point)的选项。
++ 如果你希望获得当前的time_point，可以对3种时钟之一调用now(): system_clock, steady_clock和high_resolution_clock
++ 时钟返回一个time_point, 一个duration就是相同时钟的两个time_point间的距离。
+
++ 时间组件的设计目的之一是支持在系统深层中的高效使用；它们不提供社交日历便利维护这类组件。实际上，时间组件源自高能物理的迫切需求。
+
+#### 35.2.1 duration
+
++ 在<chrono>中，标准库提供了类型duration来表示两个时间点(time_point)间的距离
+
+#### 35.2.2 time_point
+
++ 在<chrono>中，标准库提供了类型time_point，用来表示给定纪元的一个时间点，用给定的clock度量
++ 一个纪元(epoch)就是由给定clock确定的一个时间范围，用duration来衡量，从duration::zero()开始
+
+#### 35.2.3 时钟
+
++ time_point和duration值归根结底是从硬件时钟获得的。
++ 系统提供了3个命名的时钟
+  + system_clock 系统实时时钟；可以重置系统时钟(向前或向后跳)来匹配内部时钟
+  + steady_clock 时间稳定推移的时钟，即时间不会回退且时钟周期的间隔是常量
+  + high_resolution_clock 一个系统上具有最短时间增量的时钟
+
+### 35.3 编译时有理数运算
+
++ <ratio>中定义了类ratio，提供了编译时有理数运算。标准库用ratio提供时间段和时间点的编译时表示
++ 其基本思想是将一个有理数的分子和分母编码为(值)模板实参。分母必须非零
+
+### 35.4 类型函数
+
++ 在<type_traits>中，标准库提供了类型函数，用来确定类型的属性(类型萃取)以及从已有类型生成新类型(类型生成器)
+
+#### 35.4.1 类型萃取
+
++ 在<type_traits>中，标准库提供了多种类型函数，允许程序员确定一个类型或一对类型的属性。它们的名字大多是自解释的。主类型谓词(primary type predicate)检测类型的基本属性
++ 类型萃取返回一个布尔值。为了访问此值，可使用后缀::value
+
+#### 35.4.2 类型生成器
+
++ 在<type_traits>中，标准库提供了从一个给定类型实参生成另一个类型的类型函数。
++ 一个类型转换器返回一个类型。为了访问这个类型，可以使用后缀::type
+
+### 35.5 其他工具
+
+#### 35.5.1 move()和forward()
+
++ move()进行简单的右值转换。我们用move()告知编译器：此对象在上下文中不再被使用，因此其值可被移动，留下一个空对象
++ forward()的典型用法是将一个实参从一个函数 完美转发 到另一个函数。
++ 当希望用一个移动操作 窃取 一个对象的表达形式时，使用move()；当希望转发一个对象时，使用forward()
++ 因此，forward(x)总是安全的，而move(x)标记x将被销毁，因此要小心使用。调用move(x)之后x唯一安全的用法就是析构或者是赋值的目的。
+
+#### 35.5.2 swap()
+
++ 在<utility>中，标准库提供了一个通用的swap()和一个针对内置数组的特例化的版本
++ swap()不能用来交换右值
+
+#### 35.5.3 关系运算符
+
++ 在<utility>中，标准库提供了任意类型的关系运算符，它们定义在子命名空间rel_ops中
+
+#### 35.5.4 比较和哈希type_info
+
++ 在<typeindex>中，标准库提供了比较和哈希type_index的组件。一个type_index是从一个type_info创建的，专门用于这种比较和哈希。
+
+### 35.6 建议
+
++ 用<chrono>组件，如steady_clock, duration和time_point进行计时
++ 优先使用<clock>组件而不是<ctime>组件
++ 用duration_cast获得已知单位的时间段
++ 用system_clock::now()获得当前时间
++ 可以在编译时查询类型的属性
++ 仅当obj的值不再使用时使用move(obj)
++ 用forward()进行转发。
