--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -1942,3 +1942,21 @@ last_modified_date: 2024-07-30 10:00:00 +0800
     + 启动一个设备，瞬时启动，但不知道什么时间停止。所以约定一个时间段，当走完时间段即表示设备运动结束，给出一个信号。
     + 在设备运行期间，主线程不会阻塞，可以随时终止设备的运行
     + 设备运行结束后主线程可以知道设备结束了
+
++ 09.27
+  + 结束
+
++ 09.28
+  + 休息
+
++ 09.29
+  + 休息
+
+## 2024.09.30 - 2024.10.07
+
++ 国庆假期，拉萨游玩
+
+## 2024.10.08 - 2024.10.13
+
++ 10.08
+  + 
