--- a/Project/rk_工地盒子/rk_doc/2024-05-22-1-19_项目配置.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-22-1-19_项目配置.md
@@ -782,3 +782,121 @@ tag: ProjectOfRK
     "total_page": 1
 }
 ```
+
+## gh-rk-1023
+
++ frp
+  + ssh -o 'proxycommand socat - PROXY:47.100.31.121:gh-rk-1023:22,proxyport=5002' root@47.100.31.121
++ id
+  + "3b1456fc-d991-06fb-a5ce-9319876172a0"
+
++ 任务列表
+```json
+{
+    "code": 0,
+    "curr_page": 1,
+    "list": [
+        {
+            "id": "0aYFI",
+            "models": {
+                "duration": "",
+                "end": "",
+                "id": 4,
+                "name": "反光衣检测",
+                "start": ""
+            },
+            "name": "反光衣",
+            "running": 0,
+            "schedulerType": "{'alert_time':5,'region':[[0,0],[2560,0],[2560,1440],[0,1440]],'threshold':60}",
+            "song_address": "",
+            "sound_platform": 9999,
+            "source": 6,
+            "start": 1
+        },
+        {
+            "id": "p447B",
+            "models": {
+                "duration": "",
+                "end": "",
+                "id": 3,
+                "name": "安全帽检测",
+                "start": ""
+            },
+            "name": "安全帽",
+            "running": 0,
+            "schedulerType": "{'alert_time':5,'region':[[0,0],[2560,0],[2560,1440],[0,1440]],'threshold':60}",
+            "song_address": "",
+            "sound_platform": 9999,
+            "source": 6,
+            "start": 1
+        }
+    ],
+    "total_count": 2,
+    "total_page": 1
+}
+```
+
++ 相机列表
+```json
+{
+    "code": 0,
+    "curr_page": 1,
+    "list": [
+        {
+            "id": 6,
+            "name": "door",
+            "updatedtime": "2024-9-26 14:7:10",
+            "url": "rtsp://admin:qwer1234@192.168.1.7:554",
+            "url_suffix": "/live/Y69uA"
+        }
+    ],
+    "total_count": 0,
+    "total_page": 1
+}
+```
+
++ 管理平台列表
+```json
+{
+    "code": 0,
+    "curr_page": 1,
+    "list": [
+        {
+            "address": "https://wisdomsite.ticdata.cn/zhgd-cus/openApi/token&https://wisdomsite.ticdata.cn/smart-mon/openApi/addAiData",
+            "appKeyId": "qian001",
+            "appKeySecret": "12345678",
+            "id": 10,
+            "name": "常州建安平台",
+            "protocol": "changzhou_jianan",
+            "protocol_value": "常州_建安",
+            "type": "event_push",
+            "type_value": "事件推送"
+        },
+        {
+            "address": "https://wisdom.aotusoft.net/wisdom/aibox/upload",
+            "appKeyId": "aaa",
+            "appKeySecret": "123",
+            "id": 9,
+            "name": "南京傲途",
+            "protocol": "nanjing_aotu",
+            "protocol_value": "南京_傲途",
+            "type": "event_push",
+            "type_value": "事件推送"
+        },
+        {
+            "address": "https://site.ycfszn.com/phal/?s=App.AI.Setwarn",
+            "appKeyId": "aaa",
+            "appKeySecret": "123",
+            "id": 8,
+            "name": "南京熠耀",
+            "protocol": "nanjing_yiyao",
+            "protocol_value": "南京_熠耀",
+            "type": "event_push",
+            "type_value": "事件推送"
+        }
+    ],
+    "msg": "success",
+    "total_count": 3,
+    "total_page": 1
+}
+```
