--- a/Books/2024-09-05-C++程序设计语言-第四部分标准库.md
+++ b/Books/2024-09-05-C++程序设计语言-第四部分标准库.md
@@ -950,3 +950,101 @@ a.deallocate(p, n);  // 释放p所指的保存n个类型为T的对象的空间
 + 可以在编译时查询类型的属性
 + 仅当obj的值不再使用时使用move(obj)
 + 用forward()进行转发。
+
+## 第三十六章 字符串
+
+### 36.1 引言
+
++ 在<cctype>中，标准库提供了字符分类操作，在<string>中提供了字符串相关操作，在<regex>中提供了正则表达式匹配组件，在<cstring>中提供了C风格字符串支持。
++ 不同字符集的处理，编码和区域习惯将在第三十九章介绍
+
+### 36.2 字符分类
+
++ 标准库提供了一些分类函数，帮助用户操纵字符串(及其他字符序列)，还提供了一些指出字符类型属性的萃取，帮助实现字符串上的操作。
+
+#### 36.2.1 分类函数
+
++ 在<cctype>中，标准库提供了从基本运行字符集中分类字符的函数
+  + isspace(c)
+  + isalpha(c)
+  + isdigit(c)
+  + isxdigit(c)
+  + isupper(c)
+  + islower(c)
+  + isalnum(c)
+  + iscntrl(c)
+  + ispunct(c)
+  + isprint(c)
+  + isgraph(c)
+
++ 此外，标准库提供了两种去除大小写区别的有用函数
+  + toupper(c)
+  + tolower(c)
+
++ 这些字符分类函数很有用，原因之一是字符分类其实比看起来要麻烦很多。
+  + 例如，一个初学者可能会这样编写代码： if ('a' < ch && ch < 'z'>)  // 一个小写字母
+  + 下面的写法更简洁，而且可能更高效： if (islower(ch))  // 一个小写字母
++ 更重要的是，在编码空间中，字母并不保证是连续编码的，所以第一段代码可能会出错。
+
+#### 36.2.2 字符萃取
+
++ 一个字符类型的属性由其char_traits定义。一个char_traits是以下模板的特例化版本
+  + template<typename C> struct char_traits {};
++ 所有char_traits都定义在命名空间std中，头文件<string>中给出了标准char_traits。通用char_traits本身是没有属性的；只有特定字符类型的特例化char_traits才有属性
+
+### 36.3 字符串
+
++ 在<string>中，标准库提供了通用字符串模板basic_string
++ 元素(字符串)是连续存储的，这样底层输入操作可以安全的将basic_string的字符序列作为源或目的。
++ basic_string提供了强保证：若一个basic_string操作抛出了异常，则字符串保持不变。
++ 与容器类似，basic_string的设计目的不是为了用作基类，而且它提供了移动语义，因此能高效地以传值方式由函数返回。
+
+#### 36.3.1 string和C风格字符串
+
++ C风格字符串与string的根本区别是，string是具有常规语义的真正类型，而C风格字符串则是一些有用的函数支撑的一组规范。
+
+#### 36.3.2 构造函数
+
++ basic_string提供了各式各样令人眼花缭乱的构造函数。
++ 最常用也是最简单的
+  + string s0;
+  + string s1 {"As simple as that"};
+  + string s2 {s1};
+
++ 不要尝试用一个nullptr初始化一个string。最好情况下，你会得到一个糟糕的运行时错误，而最坏情况下，你会得到难以理解的未定义行为。
++ 值string::npos表示一个超出string长度的位置，通常用来表示 string 尾
+
+#### 36.3.3 基本操作
+
++ basic_string提供了比较操作，大小和容量控制操作以及访问操作
++ 用at()进行越界访问会抛出std::out_of_range。若+=(), push_back()或+会令size()超过max_size()，则抛出std::length_error
+
+#### 36.3.4 字符串I/O
+
++ 我们可以用 << 输出basic_string，以及用 >> 读取输入保存到basic_string中。若输入操作会令size()超过max_size()，则抛出std::length_error
++ getline()会从输入流中删除结束符(默认为 '\n\ )，但不将其存入字符串中。这简化了对输入的逐行处理。
+
+#### 36.3.7 find系列函数
+
++ 标准库提供了各种各样令人眼花缭乱的子串查找操作。照例，find()从s.begin()开始向后搜索，rfind()从s.end()开始向前搜索。find()函数用string::npos(非位置)来表示 未找到
++ find_*_of()系列函数与find()和rfind()的不同指出在于它查找单个字符而非一个字符序列
+
+### 36.4 建议
+
++ 使用字符分类而非手工编写的代码检查字符范围
++ 如果实现类字符串的抽象，使用character_traits实现字符上的操作
++ 可用basic_string创建任意字符类型的字符串
++ 将string用作变量和成员而非基类
++ 优先选择string操作而非C风格字符串函数
++ 以传值方式返回string(依赖移动语义)
++ 将string::npos表示 string 剩余部分
++ 不要将nullptr传递给接受C风格字符串的string函数
++ string可以按需增长和收缩
++ 当需要进行范围检查时，使用at()而非迭代器或[]
++ 当需要优化速度时，使用迭代器或[]而非at()
++ 如果使用string，应在程序某些地方捕获length_error和out_of_range
++ 仅在必要时，用c_str()生成string的C风格字符串表示
++ string输入是类型敏感的且不会溢出
++ 优先选择string_stream或通用的值抽取函数而非直接使用str*系列数值转换函数
++ 使用find()操作在string中定位元素(而不是自己编写循环)
++ 直接或间接使用substr()读取字符串，用replace()写入子串 
