--- a/Project/rk_工地盒子/rk_doc/2024-05-22-1-18_版本发行.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-22-1-18_版本发行.md
@@ -131,12 +131,12 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/task/add' \
 --header 'Host: 192.169.5.61:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "name":"安全帽",
+    "name":"反光衣",
     "start":1,
-    "source":13,
+    "source":15,
     "schedulerType":"Daemon",
     "models":{
-        "id":3,
+        "id":4,
         "duration":" ",
         "start":" ",
         "end":" "
@@ -192,7 +192,7 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/camera/delete'
 --header 'Connection: keep-alive' \
 --data-raw '{
     "ids": [
-        12
+        6
     ]
 }'
 
@@ -204,8 +204,8 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/camera/add' \
 --header 'Host: 192.169.5.61:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "name": "0.237",
-    "url":"rtsp://admin:hkkj1234@172.16.0.237:554/stream2"
+    "name": "door",
+    "url":"rtsp://admin:qwer1234@192.168.1.7:554"
 }'
 
 # 相机测试
