--- a/Project/rk_工地盒子/rk_doc/2024-05-22-1-19_项目配置.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-22-1-19_项目配置.md
@@ -789,6 +789,8 @@ tag: ProjectOfRK
   + ssh -o 'proxycommand socat - PROXY:47.100.31.121:gh-rk-1023:22,proxyport=5002' root@47.100.31.121
 + id
   + "3b1456fc-d991-06fb-a5ce-9319876172a0"
++ licence
+  + "XZP65DYK-X2EDKDRE-VYHN5VXK-ZV663MG3-MH683JGQ-VBQ67VNQ-7YGM5TWK-K56975NQ-KYQR35G6-TULK3KGK-B5GMDHBQ"
 
 + 任务列表
 ```json
