--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -1959,4 +1959,23 @@ last_modified_date: 2024-07-30 10:00:00 +0800
 ## 2024.10.08 - 2024.10.13
 
 + 10.08
-  + 
+  + 工作
+
++ 10.09
+  + 出差
+
++ 10.10
+  + 出差
+
++ 10.11
+  + 完成C++程序设计语言-第四部分标准库图书的阅读和笔记
+
++ 10.12
+  + 出差
+
++ 10.13
+  + qt
+  + ROS
+  + 机器人学理论知识
+  + 线性代数
+  + 开始网络日记工作
