--- a/Company/shanghai-tejizhi-robot/碰钉机器人/1_1_工作笔记.md
+++ b/Company/shanghai-tejizhi-robot/碰钉机器人/1_1_工作笔记.md
@@ -6,3 +6,8 @@
 
 + qt plugins 路径
   + qt5.14\5.14.0\msvc2017_64\plugins
+
+## SVN
+
+zhangjy     zjy12345
+Repository URL: https://SPSM-ROBOT/svn/LNGRobot 
