--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -1979,3 +1979,14 @@ last_modified_date: 2024-07-30 10:00:00 +0800
   + 机器人学理论知识
   + 线性代数
   + 开始网络日记工作
+  + 开发能力与平台无关，而与算法和数学能力有关
+  + RPC框架
+  + 机械臂在影视行业的应用
+
+## 2024.10.14 - 2024.10.20
+
++ 10.14
+  + 装板流程修改
+  + 参数配置功能
+    + yaml配置文件
+  + 软著编写
